--- a/InterviewMe.Web/packages.config
+++ b/InterviewMe.Web/packages.config
@@ -3,6 +3,9 @@
   <package id="Angular.UI.UI-Router" version="0.4.2" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="Bond.Core.CSharp" version="4.2.1" targetFramework="net46" />
+  <package id="Bond.CSharp" version="4.2.1" targetFramework="net46" />
+  <package id="Bond.Runtime.CSharp" version="4.2.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="jQuery" version="3.2.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
@@ -23,13 +26,16 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
+  <package id="Microsoft.Bing.Speech" version="2.0.2" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
