--- a/InterviewMe.Services/packages.config
+++ b/InterviewMe.Services/packages.config
@@ -2,23 +2,24 @@
 <packages>
   <package id="AWSSDK.Core" version="3.3.21.20" targetFramework="net46" />
   <package id="AWSSDK.S3" version="3.3.17.3" targetFramework="net46" />
-  <package id="Bond.Core.CSharp" version="4.2.1" targetFramework="net46" />
-  <package id="Bond.CSharp" version="4.2.1" targetFramework="net46" />
-  <package id="Bond.Runtime.CSharp" version="4.2.1" targetFramework="net46" />
-  <package id="Google.Api.CommonProtos" version="1.1.0" targetFramework="net46" />
-  <package id="Google.Api.Gax" version="2.1.0" targetFramework="net46" />
-  <package id="Google.Api.Gax.Grpc" version="2.1.0" targetFramework="net46" />
-  <package id="Google.Apis" version="1.29.1" targetFramework="net46" />
-  <package id="Google.Apis.Auth" version="1.29.1" targetFramework="net46" />
-  <package id="Google.Apis.Core" version="1.29.1" targetFramework="net46" />
+  <package id="Bond.Core.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Bond.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Bond.Runtime.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Google.Api.CommonProtos" version="1.2.0" targetFramework="net46" />
+  <package id="Google.Api.Gax" version="2.3.0" targetFramework="net46" />
+  <package id="Google.Api.Gax.Grpc" version="2.3.0" targetFramework="net46" />
+  <package id="Google.Apis" version="1.32.2" targetFramework="net46" />
+  <package id="Google.Apis.Auth" version="1.32.2" targetFramework="net46" />
+  <package id="Google.Apis.Core" version="1.32.2" targetFramework="net46" />
   <package id="Google.Cloud.Speech.V1" version="1.0.1" targetFramework="net46" />
   <package id="Google.LongRunning" version="1.0.0" targetFramework="net46" />
-  <package id="Google.Protobuf" version="3.4.1" targetFramework="net46" />
-  <package id="Grpc.Auth" version="1.6.1" targetFramework="net46" />
-  <package id="Grpc.Core" version="1.6.1" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net46" />
+  <package id="Grpc.Auth" version="1.10.0" targetFramework="net46" />
+  <package id="Grpc.Core" version="1.10.0" targetFramework="net46" />
   <package id="Microsoft.Bing.Speech" version="2.0.2" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.6.46" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.6.46" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.32" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
